--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://med-1-amine-9-chakroun.github.io/personalPortfolio/",
+  "homepage": "https://med-1-amine-9-chakroun.github.io/AmineChakroun/",
   "name": "vite-react-typescript-starter",
   "private": true,
   "version": "0.0.0",
